[metadata]
name = pas-tag-parser
description = Python Application Services: Tag Parser
long_description =
    "pas-tag-parser" scans for "[tokens]" and provide common handler classes for conditions, loops and rewriting of content.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?pas;tag_parser
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
